--- a/templates/signin.html
+++ b/templates/signin.html
@@ -12,7 +12,7 @@
         <h1>Aplicació web amb base de dades (M02-UF3-AC4)</h1>
     </header>
     <main>
-        <form action="{{url_for('results')}}" method="POST" class="formulario" action="/newUser">
+        <form method="POST" class="formulario" action="/newUser">
             <h2>Log in to application</h2>
             <input type="text" name="usuario" placeholder="login"/>
             <input type="text" name="contrasena" placeholder="contraseña"/>
@@ -30,5 +30,4 @@
     </footer>
 </body>
 </html>
-
 
